[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/objects/ghostCage/ghostCage.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/ghost/ghost.tscn" type="PackedScene" id=2]
[ext_resource path="res://characters/ghost/ghost in cage.gd" type="Script" id=3]
[ext_resource path="res://characters/common/activateArea.tscn" type="PackedScene" id=4]
[ext_resource path="res://characters/common/demonSpawner.tscn" type="PackedScene" id=5]
[ext_resource path="res://characters/ghost/492532__soundflakes__diablo-casting-fire-ball.mp3" type="AudioStream" id=6]
[ext_resource path="res://characters/ghost/344696__scrampunk__charm.mp3" type="AudioStream" id=7]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.748419, 1, 0.748419 )

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 1
emission_sphere_radius = 2.0
gravity = Vector3( 0, 1, 0 )

[sub_resource type="SpatialMaterial" id=3]
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 1, 0, 0, 1 )
metallic = 1.0
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="QuadMesh" id=4]
material = SubResource( 3 )
size = Vector2( 0.04, 0.08 )

[node name="ghost in cage" type="Spatial"]
script = ExtResource( 3 )

[node name="ghost" parent="." instance=ExtResource( 2 )]

[node name="ghostCage" parent="." instance=ExtResource( 1 )]
visible = false

[node name="StaticBody" type="StaticBody" parent="ghostCage"]
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="ghostCage/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 1 )

[node name="Particles" type="Particles" parent="ghostCage"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.741777, 0 )
cast_shadow = 0
amount = 50
lifetime = 2.0
process_material = SubResource( 2 )
draw_pass_1 = SubResource( 4 )

[node name="demonSpawner" parent="." instance=ExtResource( 5 )]
transform = Transform( 0.707106, -0.707107, 0, 0.5, 0.499999, -0.707107, 0.5, 0.5, 0.707106, 0, 2.42958, 0 )

[node name="activateArea" parent="." instance=ExtResource( 4 )]

[node name="summoningSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 6 )
attenuation_model = 3

[node name="canCollectSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 7 )
unit_db = 5.0
bus = "Effects"

[node name="stopPlayingSummoning" type="Timer" parent="."]
wait_time = 5.55
one_shot = true

[node name="stopCanCollectSound" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="ghostFree" from="ghost" to="." method="_on_ghost_ghostFree"]
[connection signal="demonDied" from="demonSpawner" to="." method="_on_demonSpawner_demonDied"]
[connection signal="body_entered" from="activateArea" to="." method="_on_activateArea_body_entered"]
[connection signal="timeout" from="stopPlayingSummoning" to="." method="_on_stopPlayingSummoning_timeout"]
[connection signal="timeout" from="stopCanCollectSound" to="." method="_on_stopCanCollectSound_timeout"]
